--- a/EventOrganizer/package.json
+++ b/EventOrganizer/package.json
@@ -26,7 +26,9 @@
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^19.1.9",
+    "@types/react-native": "^0.72.8"
   },
   "private": true
 }
